@@ -18,7 +18,7 @@
 The third is for a 100-metre relay.]]&gt;</textlead>
         <url_bild>http://nohost/plone/news-folder/usain-bolt-at-the-olympics/ftw-simplelayout-textblock/image.jpg</url_bild>
         <textmobile>
-            <![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sapientem locupletat ipsa natura, cuius divitias Epicurus parabiles esse docuit. Multa sunt dicta ab antiquis de contemnendis ac despiciendis rebus humanis.<br /><br />&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. At certe gravius. Ut optime, secundum naturam affectum esse possit. Quia dolori non voluptas contraria est, sed doloris privatio. Non minor, inquit, voluptas percipitur ex vilissimis rebus quam ex pretiosissimis. Sed nunc, quod agimus; Duo Reges: constructio interrete.]]>
+            <![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sapientem locupletat ipsa natura, cuius divitias Epicurus parabiles esse docuit. Multa sunt dicta ab antiquis de contemnendis ac despiciendis rebus humanis.<br /><br />&nbsp;Lorem ipsum dolor sit amet, consectetur &quot;adipiscing&quot; elit. At certe gravius. Ut optime, secundum naturam &laquo;affectum&raquo; esse possit. Quia d&ouml;lori non voluptas contraria est, sed doloris privatio. Non minor, inquit, voluptas percipitur ex vilissimis rebus quam ex pretiosissimis. Sed nunc, quod agimus; Duo Reges: constructio interrete.]]>
         </textmobile>
         <rubrik>Homepage</rubrik>
         <rubrik>Sports</rubrik>
